src/objects/IPM_Project__c.object
<CustomObject>
    <fields>
        <fullName>IPM_Complexity__c</fullName>
        <description>To capture the complexity of the project.</description>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if confidential.</description>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Copy_Target_Launch_Period__c</fullName>
        <description>copy target launch date from basscard to project</description>
        <label>Target Launch Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Core_Parameters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to check if core parameters are available for the project.</description>
        <label>Core Parameters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_CountDown_Reference_Time__c</fullName>
        <description>This field will be referred for Countdown timer.</description>
        <formula>Text(FLOOR((IPM_CancelStoppingProjectTill__c - NOW()) * 24))
&amp;&quot;:&quot;&amp;Text(FLOOR(((IPM_CancelStoppingProjectTill__c - NOW()) * 24 - FLOOR((IPM_CancelStoppingProjectTill__c - NOW()) * 24))* 60))
&amp;&quot;:&quot;&amp;Text(FLOOR((( (IPM_CancelStoppingProjectTill__c - NOW()) * 24 - FLOOR((IPM_CancelStoppingProjectTill__c - NOW()) * 24 )) * 60 - FLOOR(((IPM_CancelStoppingProjectTill__c - NOW()) * 24 - FLOOR((IPM_CancelStoppingProjectTill__c - NOW()) * 24 )) * 60 )) * 60 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountDown Reference Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Current_Document_Status__c</fullName>
        <description>To capture the current state of the gate document.</description>
        <label>Current Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with Edits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Current_Gate_Name__c</fullName>
        <description>Formula field which finds the name of the current gate document.</description>
        <formula>IF(ISPICKVAL(IPM_Temporary_Phase__c, &quot;Ideas&quot;),&quot;Charter&quot;,
IF(ISPICKVAL(IPM_Temporary_Phase__c, &quot;Feasibility&quot;),&quot;Contract&quot;,
IF(ISPICKVAL(IPM_Temporary_Phase__c, &quot;Capability&quot;), &quot;Market Ready&quot;,
IF(ISPICKVAL(IPM_Temporary_Phase__c, &quot;Market Ready&quot;),&quot;Market Deployment&quot;,
&quot; &quot;))))</formula>
        <label>IPM Current Gate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Data_Migrated_Gate__c</fullName>
        <description>To capture the name of the data migrated gate.</description>
        <label>IPM Data Migrated Gate</label>
        <picklist>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Define_Category_Group__c</fullName>
        <description>Populating the Category Group based on Category</description>
        <formula>IF( IPM_Category_Text__c = &apos;Household Care&apos; ||  IPM_Category_Text__c =&apos;Laundry&apos;, &apos;Home Care&apos;, 
 IF(IPM_Category_Text__c =&apos;Hair Care&apos; || IPM_Category_Text__c =&apos;Oral Care&apos; || IPM_Category_Text__c =&apos;Skin Care&apos; || IPM_Category_Text__c =&apos;Skin Cleansing&apos; || IPM_Category_Text__c =&apos;Deodorants &amp; Fragrances&apos;, &apos;Personal Care&apos;,&apos;&apos;)
)</formula>
        <label>Define Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Document_Update_Comments__c</fullName>
        <description>To capture the comments if the documents are updated.</description>
        <label>Document Update Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Document_Update_Date__c</fullName>
        <description>To capture the date on which the document was updated.</description>
        <label>Document Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Duration_Bosscard__c</fullName>
        <formula>CreatedDate  -  IPM_Bosscard__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Duration @ Bosscard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Duration_Capability__c</fullName>
        <formula>IPM_Capability_Approval_Date__c -  IPM_Feasibility_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Duration @ Capability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Duration_Feasibility__c</fullName>
        <formula>IPM_Feasibility_Approval_Date__c -  IPM_Idea_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Duration @ Feasibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Duration_Idea__c</fullName>
        <formula>IPM_Idea_Approval_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Duration @ Idea</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Duration_Market_Deployment__c</fullName>
        <formula>IPM_Market_Deployment_Approval_Date__c -  IPM_Market_Ready_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Duration @ Market Deployment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Duration_Market_Ready__c</fullName>
        <formula>IPM_Market_Ready_Approval_Date__c -  IPM_Capability_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Duration @Market Ready</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Duration_PLE__c</fullName>
        <formula>IPM_PLE_Approval_Date__c -  IPM_Market_Deployment_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Duration @ PLE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_EligibleForReactivation__c</fullName>
        <description>This field is to identify the project eligibility for reactivation.</description>
        <formula>AND(Text(IPM_Phase__c) = &apos;Ideas&apos;, Is_Archieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible For Reactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Exists_AtLeast_OneAssmntPerEICountry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the EICountry has one assessment related to it then this checkbox is checked.</description>
        <label>Exists At Least One Assmnt Per EICountry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Fast_Track_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To select the project as a fast track project.</description>
        <label>IPM Fast Track Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Feasibility_Approval_Date__c</fullName>
        <description>This is the rollup summary field which will store &apos;Completed On&apos; of Contract milestone.</description>
        <label>IPM Feasibility Approval Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Completed_On__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Phase__c</field>
            <operation>equals</operation>
            <value>Feasibility</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Name__c</field>
            <operation>equals</operation>
            <value>Contract Gate Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IPM_FilledIn_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To capture the % completion of the Gate Documents</description>
        <label>IPM FilledIn Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Finance_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related user in this case the finance lead.</description>
        <label>IPM Finance Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_FinanceLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Finance_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the finance related user.</description>
        <label>Finance Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_GateKeepingModel__c</fullName>
        <description>Formula field which finds the Gate Keeping Module of the project</description>
        <formula>If(ISPICKVAL(IPM_Project_Type__c, &apos;Original&apos;), 
If(ISPICKVAL(IPMProject_Span__c,&apos;Global&apos;), 
If(ISPICKVAL(IPM_GateKeeping_Model__c,&apos;GCLT Leader &amp; CCVP&apos;), 
&apos;GKM1&apos;, 
If(ISPICKVAL(IPM_GateKeeping_Model__c,&apos;CCVP&apos;), 
&apos;GKM2&apos;, 
&apos;Indeterminable GKM&apos; 
) 
), 
If(ISPICKVAL(IPMProject_Span__c,&apos;Regional&apos;),&apos;GKM4&apos;,&apos;Indeterminable GKM&apos;) 
), 
&apos;Indeterminable GKM&apos; 
)</formula>
        <label>IPM GateKeepingModel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_GateKeeping_Model__c</fullName>
        <description>To capture the GK model</description>
        <label>IPM GateKeeping Model</label>
        <picklist>
            <picklistValues>
                <fullName>CCVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCLT Leader &amp; CCVP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Gate_Keeping_Module__c</fullName>
        <description>To capture the Gate Keeping Module(GKM) that is selected.</description>
        <label>Gate Keeping Module</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Global_OR_Regional__c</fullName>
        <formula>IF(

AND(
AND( 
	IF(NOT(ISBLANK(IPM_Parent_Project__r.IPM_Parent_Project__r.Name)), TEXT(IPM_Parent_Project__r.IPM_Parent_Project__r.IPMProject_Span__c),
	IF(NOT(ISBLANK(IPM_Parent_Project__r.Name)), TEXT(IPM_Parent_Project__r.IPMProject_Span__c),
	TEXT(IPMProject_Span__c)))= &apos;Global&apos;),
AND(
	IF(NOT(ISBLANK(IPM_Parent_Project__r.IPM_Parent_Project__r.Name)), TEXT(IPM_Parent_Project__r.IPM_Parent_Project__r.IPM_Phase__c),
	IF(NOT(ISBLANK(IPM_Parent_Project__r.Name)), TEXT(IPM_Parent_Project__r.IPM_Phase__c),
	TEXT(IPM_Phase__c)))= &apos;Ideas&apos;),
AND(
	IF(NOT(ISBLANK(IPM_Parent_Project__r.IPM_Parent_Project__r.Name)), TEXT(IPM_Parent_Project__r.IPM_Parent_Project__r.IPM_Project_Type__c),
	IF(NOT(ISBLANK(IPM_Parent_Project__r.Name)), TEXT(IPM_Parent_Project__r.IPM_Project_Type__c),
	TEXT(IPM_Project_Type__c)))= &apos;Original&apos;)
)

, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global OR Regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Global_ProjectId__c</fullName>
        <description>Global Project Id will be populated by Workflow</description>
        <externalId>true</externalId>
        <label>IPM Global ProjectId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Global_Project_Id__c</fullName>
        <description>Formula field which finds the global project id.</description>
        <formula>IF(NOT(ISBLANK(IPM_Parent_Project__r.IPM_Parent_Project__r.Name)), IPM_Parent_Project__r.IPM_Parent_Project__r.Id,
IF(NOT(ISBLANK(IPM_Parent_Project__r.Name)), IPM_Parent_Project__r.Id,
Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Global Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Golbal_Project_OwnerId__c</fullName>
        <description>Formula field which finds the global project owner id.</description>
        <formula>IF(NOT(ISBLANK(IPM_Parent_Project__r.IPM_Parent_Project__r.Name)), IPM_Parent_Project__r.IPM_Parent_Project__r.OwnerId,
IF(NOT(ISBLANK(IPM_Parent_Project__r.Name)), IPM_Parent_Project__r.OwnerId,
OwnerId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Golbal Project OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Idea_Approval_Date__c</fullName>
        <description>This is the rollup summary field which will store &apos;Completed On&apos; of Charter milestone.</description>
        <label>IPM Idea Approval Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Completed_On__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Phase__c</field>
            <operation>equals</operation>
            <value>Ideas</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IPM_Immediate_Parent_Project_Name__c</fullName>
        <description>To fetch the parent project name to use in email template</description>
        <formula>IPM_Parent_Project__r.IPM_Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Immediate Parent Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if project is completed.</description>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_IsSaved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the project is saved or not</description>
        <label>IsSaved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Is_Finance_Member_Null__c</fullName>
        <description>To check if the finance member is present or not for the project.</description>
        <formula>ISBLANK(IPM_Finance_Lead__c)</formula>
        <label>IPM Is Finance Member Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Is_Invoked_From_Rollout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invoked From Rollout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Last_Modified_Date_Time__c</fullName>
        <description>To capture Last modified date to be used further for Project Archiving Workflow</description>
        <formula>NOW()</formula>
        <label>IPM Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_Last_Modified_Date__c</fullName>
        <formula>DATEVALUE(IPM_Last_Modified_Date_Time__c)</formula>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Last_Modified_Time__c</fullName>
        <formula>MID(TEXT(IPM_Last_Modified_Date_Time__c),12,5)</formula>
        <label>Last Modified Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_LocalProject_Brand__c</fullName>
        <description>Brand of local rollout project</description>
        <formula>If(AND(text(IPM_Project_Type__c)==&apos;Rollout&apos; ,text(IPMProject_Span__c)==&apos;Local&apos;),IPM_Project_Rollout__r.IPM_Brand__c,Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Local_Project_Type__c</fullName>
        <description>To identify the Type of Local Project used to Setup Financial</description>
        <label>Local Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>MCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_MCO_Name__c</fullName>
        <description>To capture the name of the MCO.</description>
        <formula>IPM_Project_Rollout__r.MCO_Name__c</formula>
        <label>IPM MCO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Deployment_Approval_Date__c</fullName>
        <description>This is the rollup summary field which will store &apos;Completed On&apos; of Market Deployment milestone.</description>
        <label>IPM Market Deployment Approval Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Completed_On__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Phase__c</field>
            <operation>equals</operation>
            <value>Market Deployment</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Ready_Approval_Date__c</fullName>
        <description>This is the rollup summary field which will store &apos;Completed On&apos; of Market Ready milestone.</description>
        <label>IPM Market Ready Approval Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Completed_On__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Phase__c</field>
            <operation>equals</operation>
            <value>Market Ready</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Type__c</fullName>
        <description>To capture the type of market.</description>
        <label>Market Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Developing &amp; Emerging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Market__c</fullName>
        <description>To capture the market name value.</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>Dishwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Cleaning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Misalligned__c</fullName>
        <description>To store auto aligned value.</description>
        <formula>IF(AND( TEXT(IPMProject_Span__c) = &apos;Local&apos;,IPM_Target_Launch_Dates__c &lt;&gt;   IPM_Project_Rollout__r.Target_Launch_Date__c), &apos;NO&apos;,&apos;YES&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM_AutoAligned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_No_Rollout_Disabled__c</fullName>
        <description>This is used to disable &apos;No Rollout&apos; and remove delete icon when the local project is past Market Deployment phase.</description>
        <formula>AND( Text(IPMProject_Span__c)==&apos;Local&apos; ,OR(Text(IPM_Phase__c)==&apos;Market Deployment&apos;,Text(IPM_Phase__c)==&apos;PLE&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Rollout/Delete Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_No_of_Country_Rollouts__c</fullName>
        <description>To keep count of the number of country rollouts.</description>
        <label>No of Country Rollouts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Org_Base_URL__c</fullName>
        <description>To capture the org URL.</description>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_PLE_Approval_Date__c</fullName>
        <description>This is the rollup summary field which will store &apos;Completed On&apos; of PLE milestone.</description>
        <label>IPM PLE Approval Date</label>
        <summarizedField>IPM_Milestone__c.IPM_Completed_On__c</summarizedField>
        <summaryFilterItems>
            <field>IPM_Milestone__c.IPM_Phase__c</field>
            <operation>equals</operation>
            <value>Post Launch Evaluation</value>
        </summaryFilterItems>
        <summaryForeignKey>IPM_Milestone__c.IPM_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IPM_PM_Approach__c</fullName>
        <description>To select the PM approach taken.</description>
        <label>PM Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Parent_BI__c</fullName>
        <description>To Capture the Child Business Impact used in BD BB Report</description>
        <formula>IF(  ISPICKVAL( IPM_SourceProjectType__c , &apos;Original&apos;) ,
	IF( ISPICKVAL( IPMProject_Span__c , &apos;Global&apos;) ,  BI__c ,
	
IF(AND(ISPICKVAL( IPMProject_Span__c , &apos;Local&apos;),ISPICKVAL( IPM_Project_Type__c ,    &apos;Rollout&apos;),OR( ISPICKVAL( IPM_ProjectGKM__c , &apos;GKM4&apos;),ISPICKVAL( IPM_ProjectGKM__c , &apos;GKM3&apos;)) ),  
		           IPM_Parent_Project__r.BI__c ,

				   IF(AND(ISPICKVAL( IPMProject_Span__c , &apos;Local&apos;),ISPICKVAL( IPM_Project_Type__c ,    &apos;Rollout&apos;),NOT(ISPICKVAL( IPM_ProjectGKM__c , &apos;GKM4&apos;)),NOT(ISPICKVAL( IPM_ProjectGKM__c , &apos;GKM3&apos;))),
				   IPM_Parent_Project__r.IPM_Parent_Project__r.BI__c,
				   
IF(AND(ISPICKVAL( IPMProject_Span__c , &apos;Regional&apos;),ISPICKVAL( IPM_Project_Type__c ,    &apos;Rollout&apos;)),IPM_Parent_Project__r.BI__c ,BI__c)))),&apos;&apos;)</formula>
        <label>Parent_BI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Parent_Project_Name__c</fullName>
        <formula>IF( TEXT(IPMProject_Span__c) = &apos;Regional&apos; ,  IPM_Parent_Project__r.IPM_Project_Name__c ,  IPM_Parent_Project__r.IPM_Parent_Project__r.IPM_Project_Name__c )</formula>
        <label>Parent Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Capture Parent Project based on region and country rollouts</description>
        <label>IPM Parent Project</label>
        <referenceTo>IPM_Project__c</referenceTo>
        <relationshipLabel>IPM Projects</relationshipLabel>
        <relationshipName>IPM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_PhaseChangeQueueJobId__c</fullName>
        <description>To capture the phase change queue job id.</description>
        <label>Phase Change Queue Job Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Phase__c</fullName>
        <description>To capture the phase of the project.</description>
        <label>IPM_Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Ideas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Platform_Formula__c</fullName>
        <formula>IF(ISBLANK(IPM_Parent_Project__c),TEXT(IPM_Category_Platform__c),IF(ISBLANK(IPM_Parent_Project__r.IPM_Parent_Project__c),TEXT(IPM_Parent_Project__r.IPM_Category_Platform__c),TEXT(IPM_Parent_Project__r.IPM_Parent_Project__r.IPM_Category_Platform__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Platform Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Postponed_Comments__c</fullName>
        <description>For Storing Postponement Comments</description>
        <label>IPM Postponed Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_PrepareForArchival__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepare For Archival</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_PreviousDocumentStatus__c</fullName>
        <label>Previous Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with Edits</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_PreviouslyStoppedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previously Stopped By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_PreviouslyStopped</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_ProjectGKM__c</fullName>
        <label>IPM_ProjectGKM</label>
        <picklist>
            <picklistValues>
                <fullName>GKM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKM4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKM5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKM6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKM7</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_ProjectJobType__c</fullName>
        <description>To store the project job type.</description>
        <label>Project Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Project Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_ProjectStoppedDatetime__c</fullName>
        <label>Project Stopped Datetime String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_ProjectSubType__c</fullName>
        <description>To capture the subtype of project.</description>
        <label>Project Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Innovation/Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Led Growth(BLG)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Based_Threshold_Status__c</fullName>
        <description>Check independently of the cluster whether the Project is below or above threshold.</description>
        <formula>IF((OR(ISBLANK(IPM_Parent_Project__c),ISNULL(IPM_Parent_Project__c))), 
    IF(Exempt_from_Threshold__c,
     &apos;Exempt&apos;,
     IF(IPM_Category_Thresh__c &lt; IPM_Project_Y3iTO__c ,
     &apos;Above Threshold&apos;,
     &apos;Below Threshold&apos;
      )
  ), 
    IF(OR(ISBLANK(IPM_Parent_Project__r.IPM_Parent_Project__c),ISNULL(IPM_Parent_Project__r.IPM_Parent_Project__c)),
     IF(IPM_Parent_Project__r.Exempt_from_Threshold__c,
       &apos;Exempt&apos;,
       IF(IPM_Parent_Project__r.IPM_Category_Thresh__c &lt; IPM_Parent_Project__r.IPM_Project_Y3iTO__c ,
        &apos;Above Threshold&apos;,
        &apos;Below Threshold&apos;
      )
     ),
     IF(IPM_Parent_Project__r.IPM_Parent_Project__r.Exempt_from_Threshold__c,
      &apos;Exempt&apos;,
      IF(IPM_Parent_Project__r.IPM_Parent_Project__r.IPM_Category_Thresh__c &lt; IPM_Parent_Project__r.IPM_Parent_Project__r.IPM_Project_Y3iTO__c ,
        &apos;Above Threshold&apos;,
        &apos;Below Threshold&apos;
      )
     )
  )  
)</formula>
        <label>IPM Project Based Threshold Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Description__c</fullName>
        <description>To capture the description of the project.</description>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Gate__c</fullName>
        <description>To store the current gate document name of the project.</description>
        <formula>CASE( IPM_Phase__c , &apos;Ideas&apos;, &apos;Charter Gate&apos;, &apos;Feasibility&apos;, &apos;Contract Gate&apos;,&apos;Capability&apos;, &apos;Market Ready Gate&apos;,&apos;Market Ready&apos;, &apos;Market Deployment Gate&apos; ,null)</formula>
        <label>Project Gate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Gatekeeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related user in this case the gatekeeper.</description>
        <label>Project Gatekeeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>